# Data-Science-Agent

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup_vector_db.py
app/: streamlit_app.py
app/components/: __init__.py  file_upload.py
data/: README.md  problem_summaries.json
data/vector_db/google-text-embedding-004/: embeddings.npy
data/vector_db/openai-text-embedding-ada-002/: metadata.csv
src/: __init__.py  app.py  async_streaming_callback.py  code_executor_improved.py  graph.py  llm_logging_wrapper.py  llm_utils.py  prompts.py  state.py  streaming_callback.py  utils.py  work_dir_manager.py
src/agents/: __init__.py  coding_agent.py  orchestrator.py  research_agent.py
src/tools/: __init__.py  code_executor.py  code_executor_quick_fix.py  vector_search.py
