# Adapted from open_deep_research pyproject.toml
# Project configuration for the Data Science Agent

[project]
name = "open-data-science-agent"
version = "0.1.0"
description = "Multi-agent system for automated data science using Kaggle insights"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.1.0", 
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta" 